--- a/options.conf
+++ b/options.conf
@@ -3,6 +3,7 @@ name = bro
 url = https://www.bro.org/downloads/bro-2.6.4.tar.gz
 archives = 
 giturl = https://github.com/bro/bro.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -33,6 +34,8 @@ insecure_build = false
 keepstatic = true
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
