--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = bro
 url = https://www.bro.org/downloads/bro-2.6.4.tar.gz
-archives = 
+archives = https://sqlite.org/2020/sqlite-autoconf-3310100.tar.gz src/3rdparty/
 giturl = https://github.com/bro/bro.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
